@@ -1,3 +1,11 @@
+2016-04-23 21:06  chrox
+
+	* add support for firmware version 5.7.4
+
+2015-12-02 19:23  chrox
+
+	* add support for firmware version 5.6.5
+
 2015-05-16 17:19  chrox
 
 	* add support for firmware version 5.6.2
